# CrossyRoad

./: .gitignore  CMakeLists.txt  README.md  main.cpp  vcpkg-configuration.json  vcpkg.json
.github/workflows/: config.yml
app/: main.cpp
include/: camera.hpp  functions.hpp  gameLogic.hpp  myKeylistener.hpp  obstacle.hpp  sphere.hpp
src/: CMakeLists.txt  camera.cpp  gameLogic.cpp  main.cpp  obstacle.cpp  sphere.cpp
tests/: CMakeLists.txt  test_myFunctions.cpp  test_myGameLogic.cpp  test_myKeylistner.cpp  test_obstacle.cpp  test_sphere.cpp
